2008-01-10  Martin Lambers <marlam@marlam.de>

	* NEWS: Update.
	* doc/cvlview.1, doc/cvlview.texi: Update.
	* src/range_selector.h, src/range_selector.cpp: Improve range
	spinboxes. This change replaces the erraneous patch from 2007-12-06.
	* src/range_selector.h, src/range_selector.cpp: Simplify the previous
	change.

2008-01-09  Martin Lambers <marlam@marlam.de>

	* configure.ac: Require CVL >= 0.2.3 to benefit from a fix to the
	pseudo color function.
	* README: Update.

2007-12-08  Martin Lambers <marlam@marlam.de>

	* configure.ac, doc/cvlview.1, doc/cvlview.texi: Bump version to
	0.2.1.

2007-12-06  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_os.h: Add MH_STDIN, MH_STDOUT.
	* src/range_selector.h, src/range_selector.cpp: Improve range
	spinboxes. Suggested by Maik Keller.
	* src/cvlview.cpp: Show filename in window title. Suggested by
	Maik Keller.

2007-11-08  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Fix export of whole image if it is stored in a
	CVL_LUM frame.
	* src/conf.cpp: Save doubles with enough precision.

2007-10-28  Martin Lambers <marlam@marlam.de>

	* src/range_selector.cpp: Fix resetting of histogram bounds for color
	images.

2007-10-18  Martin Lambers <marlam@marlam.de>

	* src/range_selector.h, src/range_selector.cpp: Allow much more
	fine-grained control over the histogram and the range selection.
	* src/range_selector.cpp: Update view when changing upper and lower
	bounds of the histogram.
	* src/range_selector.cpp: Tweak layout. Fix initial display of lower
	and upper bound.
	* src/range_selector.cpp: Fix range properly when updating the
	histogram bounds.
	* NEWS, doc/cvlview.texi: Update for 0.2.0.

2007-10-17  Martin Lambers <marlam@marlam.de>

	* src/viewpoint_selector.cpp, src/channel_selector.cpp: Update and add
	keyboard shortcuts.
	* src/cvlview.h, src/cvlview.cpp, src/dataset_selector.h,
	src/dataset_selector.cpp, src/Makefile.am, src/cvlview.qrc, src/icons,